--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@fortawesome/fontawesome-free": "5.3.1",
     "antd": "3.9.3",
     "axios": "0.18.0",
-    "jquery": "3.2.1",
+    "jquery": ">=3.4.0",
     "lodash": "4.17.11",
     "lodash.clonedeep": "4.17.11",
     "moment": "2.20.1",
